/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2014-02-28 13:50 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * contrib/hbsqlit3/*
    * sqlite3 update 3.7.15.2 -> 3.8.3.1

2014-02-26 12:15 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/compiler/hbusage.c
  * utils/hbdoc/hbdoc.prg
  * utils/hbmake/hbmake.prg
  * utils/hbpp/hbpp.c
  * utils/hbrun/hbrun.prg
  * utils/hbtest/hbtest.prg
  * winmake/compile.mak
    ! bump copyright year to 2014

2014-02-16 17:15 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/rtl/win_misc.c
    ! Correct file version line

2014-02-16 17:00 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * ChangeLog
    ! my mistake in file name, must be source/rtl/win_misc.c

2014-02-16 15:55 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * winmake/common.mak
  * winmake/compile.mak
  * winmake/rtl.lst
  * source/rtl/Makefile
  * source/rtl/win_misc.prg
    + Separated Windows API wrappers from hbwinole.c:
      ANSITOWIDE
      WIDETOANSI
      MESSAGEBOX

2014-02-14 15:05 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/rtl/hbwinole.c
  * source/rtl/win32ole.prg
    ! fix hidden memory leaks in exceptions service
    Thanks to Claudio Voskian for notifying

  * contrib/libnf/dispc.c
    ! globally visible variables moved to static structure.

2014-01-15 12:10  UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  + contrib/hbmlzo/Makefile
  + contrib/jpeg/Makefile
  + contrib/png/Makefile
  + contrib/tiff/Makefile
    Added missing makefiles

2014-01-11 00:15  UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * contrib/tipssl/client.prg
    source/tip/client.prg
    ! minor fix when nlen <0  and server return no lenght in response
    
2014-01-07 14:10  UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * contrib/rdd_ads/adsfunc.c 